[package]
name = "rwutil"
version = "1.0.1"
authors = ["Marc Brinkmann <git@marcbrinkmann.de>"]
license = "MIT"
description = "Extends io::{Read,Write} with methods for reading length-prefixed strings"
repository = "https://github.com/mbr/rwutil-rs"
documentation = "https://mbr.github.io/rwutil-rs/rwutil"

[dependencies]
byteorder = "^0.4"
