[package]
name = "rwutil"
version = "2.0.0"
authors = ["Marc Brinkmann <git@marcbrinkmann.de>"]
license = "MIT"
description = "Extends io::{Read,Write} with methods for reading length-prefixed strings"
repository = "https://github.com/mbr/rwutil-rs"
documentation = "https://docs.rs/rwutil"

[dependencies]
byteorder = "1.0.0"
